welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: n is already defined as variable n
var n = 0;
    ^